--- a/week8/views/users.view.ejs
+++ b/week8/views/users.view.ejs
@@ -4,6 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
+    <style>
+      table, th, td {
+          /* font-size: 90%; */
+          white-space : nowrap;
+      }
+  </style>
     <title>My New Website</title>
 </head>
 <body>
@@ -13,26 +19,40 @@
   </header>
 
   <main>
-    This is the homepage
-
-    <br />
-    <a href="/adduser">Add User page</a><br />
-    <a href="/signin">Sign-In page</a><br />
-    <a href="/protected">Protected Page (Need sign-in first!)</a><br />
-    <a href="/api/users/render">Print all users</a><br />
-    <a href="/api/provinces/render">Print all provinces</a><br />
-    <a href="/api/regencies/render">Print all regencies</a><br />
-    <a href="/api/districts/render">Print all districts</a><br />
-    <!-- <a href="/signout">Signout Page</a><br /> -->
-
-    <!-- <h1>The XMLHttpRequest Object</h1> -->
-    <br />
-    <br />
-
-    <button type="button" onclick="loadDoc()">Check Authentication</button>
-
-    <p id="status">Status</p>
-    <p id="text">Text</p>
+    <a href="/">Go back to home page</a>
+    <h1>Users</h1>
+    <table style="width:100">
+        <tr>
+            <th>Id</th>
+            <th>First name</th>
+            <th>Last name</th>
+            <th>Email</th>
+            <th>District Id</th>
+            <th>Created at</th>
+        </tr>
+        <% for(var i=0; i < users.length; i++) { %>
+            <tr>
+                <td>
+                    <%= users[i].id %>
+                </td>
+                <td>
+                    <%= users[i].first_name %>
+                </td>
+                <td>
+                    <%= users[i].last_name %>
+                </td>
+                <td>
+                    <%= users[i].email %>
+                </td>
+                <td>
+                    <%= users[i].district_id %>
+                </td>
+                <td>
+                    <%= users[i].created_at %>
+                </td>
+            </tr>
+            <% } %>
+    </table>
  
   </main>
 
